--- a/css/style.css
+++ b/css/style.css
@@ -968,6 +968,8 @@ ul,li{
 	padding:50px 30px;
 	color:#ffffff;
 	width:25%;
+	width:20%;
+	height: 335px;
 	float:left;
 	background:#1d93e5;
 	background-size:cover;
