--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Sorto Multipurpose HTML5 Template */
+/* String Unlimited | A Clothing Company &#8211; String Unlimited | A Clothing Company */
 
 
 /************ TABLE OF CONTENTS ***************
