--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-/* Sorto Multipurpose HTML5 Template */
+/* String Unlimited | A Clothing Company &#8211; String Unlimited | A Clothing Company */
 @media only screen and (max-width: 1600px){
 	
 	.four-col-fluid .column{
