--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,10 @@
 
  ***/
 * {
-	margin:0px;
+	margin-top:4px;
+	margin-left: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
 	padding:0px;
 	border:none;
 	outline:none;
