--- a/css/style.css
+++ b/css/style.css
@@ -699,7 +699,7 @@ ul,li{
 .main-menu .navigation > li:hover > a,
 .main-menu .navigation > li.current > a,
 .main-menu .navigation > li.current-menu-item > a{
-	color:#01a5c9;
+	color:#ffffff;
 	opacity:1;
 }
 
