--- a/css/style.css
+++ b/css/style.css
@@ -736,7 +736,7 @@ ul,li{
 	line-height:16px;
 	font-size:20px;
 	display:block;
-	color:#1d93e5;
+	color:#ffffff;
 	text-align:center;
 	z-index:5;	
 }
