--- a/css/style.css
+++ b/css/style.css
@@ -678,7 +678,7 @@ ul,li{
 	display:block;
 	padding:25px 0px;
 	font-size:13px;
-	color:#ffffff;
+	color:#27343e;
 	font-weight:500;
 	line-height:30px;
 	border-top:none;
